# pyggb

./: .gitignore  .gitlab-ci.yml  LICENSE.md  README.md  asset-manifest.json  cypress.config.ts  dev-server.sh  developing-README.md  index.html  package-lock.json  package.json  skulpt-ggb.js
doc/: .buildinfo  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
doc/_sources/: index.rst.txt
doc/_sources/concepts/: numbers.rst.txt
doc/_sources/reference/: index.rst.txt
doc/_sources/reference/classes/: boolean.rst.txt  ellipse.rst.txt  point.rst.txt  segment.rst.txt
doc/_sources/reference/functions/: rotate.rst.txt  (+1 more)
doc/_sources/webapp/: python-errors.rst.txt  sharing.rst.txt
doc/concepts/: index.html  numbers.html  python-vs-ggb-objects.html
doc/reference/: index.html
doc/reference/classes/: boolean.html  circle.html  common-properties.html  ellipse.html  line.html  number.html  object-operations.html  parabola.html  point.html  polygon.html  segment.html  vector.html
doc/reference/functions/: distance.html  if.html  intersect.html  misc.html  number-of-objects.html  rotate.html  zoom-in.html
doc/reference/user-interface/: slider.html
doc/screenshots/: package-lock.json  package.json
doc/screenshots/source/: app-summary.mjs
doc/source/: conf.py  index.rst
doc/source/concepts/: index.rst  python-vs-ggb-objects.rst
doc/source/webapp/: gui.rst  index.rst  program-storage.rst  running-code.rst
doc/webapp/: gui.html  index.html  program-storage.html  python-errors.html  running-code.html  sharing.html
(+177 files in other folders)
