[project]
name = "pyggb-doc"
version = "0.1.0"
description = "Documentation for PyGgb"
authors = [
    {name = "Ben North",email = "ben@redfrontdoor.org"}
]
license = {text = "CC BY-SA"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
