[project]
name = "pyggb-doc"
version = "0.1.0"
description = "Documentation for PyGgb"
authors = [
    {name = "Ben North",email = "ben@redfrontdoor.org"}
]
license = {text = "CC BY-SA"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sphinx (>=8.1.3,<9.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2025.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
